--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="general_file">File</string>
     <string name="general_folder">Folder</string>
     <string name="general_empty">Empty</string>
+    <string name="general_app_settings">App Settings</string>
     <plurals name="general_files_count">
         <item quantity="one">File</item>
         <item quantity="two">Files</item>
@@ -38,12 +39,16 @@
     <string name="models_explorer_storage">Storage</string>
     <string name="models_explorer_internal_storage">Internal Storage</string>
     <string name="models_explorer_sd_card">SD Card</string>
+    <string name="models_explorer_download_model">Download Model</string>
+    <string name="models_explorer_download_model_description_text">Enter .glb model URL</string>
+    <string name="models_explorer_download_model_error_text">Entered string is not a valid URL</string>
     <string name="models_explorer_error_loading_files">Unable to load files, please check files permissions</string>
     <string name="models_explorer_error_opening_file_or_folder">Unable to open %1$s, please check files permissions</string>
 
     <!--  Model View  -->
     <string name="model_view_model_saved_to_collection">Model has been saved to collection with name "%s"</string>
     <string name="model_view_model_removed_from_collection">Model "%s" has been removed from collection</string>
+    <string name="model_view_add_to_collection">Add To Collection</string>
     <string name="model_view_error_loading_model">Failed to load AR model</string>
     <string name="model_view_error_save_model_to_collection">Failed to save model to collection</string>
     <string name="model_view_error_remove_model_from_collection">Failed to remove model from collection</string>
@@ -57,4 +62,5 @@
     <string name="camera_permission_rational_title">Camera Access</string>
     <string name="camera_permission_rational_text">Application needs camera access to display AR models in augmented reality</string>
     <string name="camera_permission_denied_text">Application needs camera access to display AR models in augmented reality you can grant it in application settings</string>
+    <string name="model_view_loading_model">Loading Model</string>
 </resources>
