--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="models_explorer_error_opening_file_or_folder">Unable to open %1$s, please check files permissions</string>
 
     <!--  Model View  -->
-    <string name="model_view_model_saved_to_collection">Model has been saved to collection with name "%s"</string>
+    <string name="model_view_model_saved_to_collection">Model has been saved to collection with name: \"%s\"</string>
     <string name="model_view_model_removed_from_collection">Model "%s" has been removed from collection</string>
     <string name="model_view_add_to_collection">Add To Collection</string>
     <string name="model_view_error_loading_model">Failed to load AR model</string>
