--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="model_view_model_saved_to_collection">Model has been saved to collection with name: \"%1$s\"</string>
     <string name="model_view_model_removed_from_collection">Model "%s" has been removed from collection</string>
     <string name="model_view_save_to_collection">Save To Collection</string>
+    <string name="model_view_clear_scene">Clear Scene</string>
     <string name="model_view_downloading_model_to_collection">Downloading model to collection</string>
     <string name="model_view_error_loading_model">Failed to load AR model</string>
     <string name="model_view_error_save_model_to_collection">Failed to save model to collection</string>
