--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="models_explorer_collected_model_delete_model_text">Are you sure want to delete model: \"%1$s\"?</string>
 
     <!--  Model View  -->
-    <string name="model_view_model_saved_to_collection">Model has been saved to collection with name: \"%1$s\"</string>
+    <string name="model_view_model_saved_to_collection">Model has been saved to collection as: \"%1$s\"</string>
     <string name="model_view_model_removed_from_collection">Model "%s" has been removed from collection</string>
     <string name="model_view_save_to_collection">Save To Collection</string>
     <string name="model_view_clear_scene">Clear Scene</string>
